--- a/depends/config.site.in
+++ b/depends/config.site.in
@@ -26,6 +26,9 @@ fi
 if test -z "$with_qt_bindir" && test -z "@no_qt@"; then
   with_qt_bindir="${depends_prefix}/native/bin"
 fi
+if test -z $with_protoc_bindir; then
+  with_protoc_bindir=$depends_prefix/native/bin
+fi
 if test -z "$with_mpgen" && test -n "@multiprocess@"; then
   with_mpgen="${depends_prefix}/native"
 fi
